--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img id="userPhoto" src="https://i.imgur.com/V6P1q2S.jpg" alt="User Photo">
+    <img id="userPhoto" src="https://i.imgur.com/jNASSDK.jpg" alt="User Photo">
     
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
