--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
-        <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">Visit Our Website</a>
+        <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
+        <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
         <a class="link" href="https://bit.ly/2N2cjLj" target="_blank">Season of Truffles</a>
         <a class="link" href="https://bit.ly/3ihRauG" target="_blank">Set Dinner Menu</a>
         <a class="link" href="https://bit.ly/2AhFSFN" target="_blank">Father's Day</a>
