--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
+        <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
         <a class="link" href="https://bit.ly/2N2cjLj" target="_blank">Season of Truffles</a>
         <a class="link" href="https://bit.ly/3ihRauG" target="_blank">Set Dinner Menu</a>
     </div>
