--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
-        <a class="link" href="https://i.imgur.com/4bqluid.jpg" target="_blank">Barolo Wine Dinner </a>
+        <a class="link" href="https://drive.google.com/file/d/1m0hKx6hPNBAAcAWbvqDe-MatHJQUAXQj/view?usp=sharing" target="_blank">Barolo Wine Dinner </a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
         <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
