--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
-        <a class="link" href="https://drive.google.com/file/d/1m0hKx6hPNBAAcAWbvqDe-MatHJQUAXQj/view?usp=sharing" target="_blank">Barolo Wine Dinner </a>
+        <a class="link" href="https://bit.ly/35dKA2S" target="_blank">White Truffle Menu</a>
+        <a class="link" href="https://bit.ly/3dPbC4v" target="_blank">Veneto Wine Dinner </a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
         <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
-        <a class="link" href="https://bit.ly/2N2cjLj" target="_blank">Season of Truffles</a>
+
         <a class="link" href="https://bit.ly/3ihRauG" target="_blank">Set Dinner Menu</a>
     </div>
 
