--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
+        <a class="link" href="https://bit.ly/31hyc0L" target="_blank">Vogue Article</a>
         <a class="link" href="https://bit.ly/35dKA2S" target="_blank">White Truffle Menu</a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
