--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
+        <a class="link" href="api.whatsapp.com/send?phone=85225228869" target="_blank">Reservation</a>
         <a class="link" href="http://bit.ly/3pLNEfy" target="_blank">Valentine's Day Menu</a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
