--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
         <a class="link" href="tel:+85225228869" target="_blank">Reservation</a>
-        <a class="link" href="https://bit.ly/3kLJItw" target="_blank">Piedmont Wine Dinner</a>
+        <a class="link" href="https://bit.ly/3tpx5aU" target="_blank">Castello Monsanto Wine Dinner</a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
         <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
