--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
-        <a class="link" href="https://bit.ly/3dZkdn3" target="_blank">Mother’s Day Lunch Menu</a>
+        <a class="link" href="https://bit.ly/3t3jp4u" target="_blank">Mother’s Day Lunch Menu</a>
         <a class="link" href="https://bit.ly/3n3lRqj" target="_blank">Fontodi Wine Dinner</a>
         <a class="link" href="tel:+85225228869" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
