--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
-        <a class="link" href="https://bit.ly/3f34xzn" target="_blank">Watson's Wine Wine Dinner</a>
+        <a class="link" href="https://bit.ly/3L1DhOS" target="_blank">Takeaway Menus</a>
         <a class="link" href="https://api.whatsapp.com/send?phone=85291384811" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/3fpOXem" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
