--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">Website</a>
         <a class="link" href="https://www.ciakconcept.com/download/landmark/CIAK-ALaCarte.pdf" target="_blank">A La Carte</a>
         <a class="link" href="https://bit.ly/3L1DhOS" target="_blank">Takeaway Menus</a>
-        <a class="link" href="https://api.whatsapp.com/send?phone=85291384811" target="_blank">Reservation</a>
+        <a class="link" href="https://www.sevenrooms.com/reservations/ciakinthekitchen" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
         <a class="link" href="https://bit.ly/3mc58A2" target="_blank">Lifestyle Article</a>
