--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">https://github.com/laisundining/ciakinthekitchen/blob/master/index.html
     <title>CIAK - In The Kitchen</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
@@ -16,7 +16,6 @@
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">Website</a>
         <a class="link" href="https://www.ciakconcept.com/download/landmark/CIAK-ALaCarte.pdf" target="_blank">A La Carte</a>
-        <a class="link" href="https://bit.ly/3L1DhOS" target="_blank">Takeaway Menus</a>
         <a class="link" href="https://www.sevenrooms.com/reservations/ciakinthekitchen" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
