--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
-        <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">Website</a>
+        <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
+        <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
         <a class="link" href="https://www.ciakconcept.com/download/landmark/CIAK-ALaCarte.pdf" target="_blank">A La Carte</a>
         <a class="link" href="https://www.sevenrooms.com/reservations/ciakinthekitchen" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">Foodpanda</a>
