--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
         <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
-        <a class="link" href="https://www.ciakconcept.com/download/landmark/CIAK-ALaCarte.pdf" target="_blank">A La Carte</a>
+        <a class="link" href="https://www.dropbox.com/s/zegp21k5unfr7nw/CIAK%20A%20La%20Carte%20Menu.pdf?dl=0" target="_blank">A La Carte</a>
         <a class="link" href="https://www.sevenrooms.com/reservations/ciakinthekitchen" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
