--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="link" href="https://www.sevenrooms.com/experiences/ciakinthekitchen/-crab-wine-extravaganza-four-hand-dinner--8409921008" target="_blank">3-Night Limited Crab & Wine Extravaganza Dinner Event</a>
         <a class="link" href="https://www.sevenrooms.com/reservations/ciakinthekitchen" target="_blank">Reservation</a>
         <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
-        <a class="link" href="https://www.dropbox.com/s/zegp21k5unfr7nw/CIAK%20A%20La%20Carte%20Menu.pdf?dl=0" target="_blank">A La Carte</a>
+        <a class="link" href="https://www.dropbox.com/s/zegp21k5unfr7nw/CIAK%20A%20La%20Carte%20Menu.pdf?dl=0&raw=1" target="_blank">A La Carte</a>
         <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
         <a class="link" href="https://bit.ly/2S1go5d" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/2EdvqkQ" target="_blank">OpenRice</a>
