--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
         <a class="link" href="https://www.sevenrooms.com/experiences/ciakinthekitchen/-crab-wine-extravaganza-four-hand-dinner--8409921008" target="_blank">3-Night Limited Crab & Wine Extravaganza Dinner Event</a>
-        <a class="link" href="https://bit.ly/3ocGi9v" target="_blank">Reservation</a>
+        <a class="link" href=" https://bit.ly/3uxrTof" target="_blank">Reservation</a>
         <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
         <a class="link" href="https://ciakconcept.com/ciak-all-day-italian/" target="_blank">Menus</a>
         <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
