--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakinthekitchen</a>
     <div id="links">
-        <a class="link" href=" http://sevn.ly/xch98L0X" target="_blank">CIAK-ALL DAY ITALIAN 7TH ANNIVERSARY DINNER</a>
+        <a class="link" href=" http://sevn.ly/xznp2uqi" target="_blank">CIAK x Zia Collaboration Reservation</a>
         <a class="link" href=" https://bit.ly/3uxrTof" target="_blank">Reservation</a>
         <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
         <a class="link" href="https://ciakconcept.com/ciak-all-day-italian/" target="_blank">Menus</a>
